--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@casl/ability": "^3.2.0",
+    "@casl/vue": "^0.5.1",
     "@mdi/font": "^3.6.95",
+    "@types/jwt-decode": "^2.2.1",
     "@types/nprogress": "^0.2.0",
     "axios": "^0.19.0",
     "core-js": "^3.3.2",
+    "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
     "nprogress": "^0.2.0",
     "roboto-fontface": "*",
