--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/nprogress": "^0.2.0",
     "axios": "^0.19.0",
     "core-js": "^3.3.2",
+    "idle-vue": "^2.0.5",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
